--- a/packages/ERTP/package.json
+++ b/packages/ERTP/package.json
@@ -48,6 +48,7 @@
     "@endo/far": "^1.1.1",
     "@endo/marshal": "^1.4.1",
     "@endo/nat": "^5.0.6",
+    "@endo/pass-style": "^1.3.1",
     "@endo/patterns": "^1.3.1",
     "@endo/promise-kit": "^1.1.1"
   },
