chore: move priceFeed.test to a: & make updatePriceFeeds stand-alone

--- a/a3p-integration/proposals/a:upgrade-next/package.json
+++ b/a3p-integration/proposals/a:upgrade-next/package.json
@@ -7,7 +7,8 @@
       "coreProposals": []
     },
     "sdk-generate": [
-      "probe-zcf-bundle probe-submission"
+      "probe-zcf-bundle probe-submission",
+      "updatePriceFeeds priceFeed-submission"
     ],
     "type": "Software Upgrade Proposal"
   },
