feat: split up priceFeed proposals and add to app.go

--- a/a3p-integration/proposals/a:upgrade-next/package.json
+++ b/a3p-integration/proposals/a:upgrade-next/package.json
@@ -6,9 +6,13 @@
     "upgradeInfo": {
       "coreProposals": []
     },
+    "comment": "all the priceFeed submissions go in the same directory",
     "sdk-generate": [
       "probe-zcf-bundle probe-submission",
-      "updatePriceFeeds priceFeed-submission"
+      "updateAtomPriceFeed priceFeed-submission",
+      "updateStTiaPriceFeed priceFeed-submission",
+      "updateStOsmoPriceFeed priceFeed-submission",
+      "updateStAtomPriceFeed priceFeed-submission"
     ],
     "type": "Software Upgrade Proposal"
   },
