feat(orchestration): add support for queries (icq/v1)
- refs: #9072

--- a/packages/cosmic-proto/package.json
+++ b/packages/cosmic-proto/package.json
@@ -32,13 +32,17 @@
       "types": "./dist/codegen/cosmos/*.d.ts",
       "default": "./dist/codegen/cosmos/*.js"
     },
-    "./cosmos/tx/v1beta1/tx.js": {
-      "types": "./dist/codegen/cosmos/tx/v1beta1/tx.d.ts",
-      "default": "./dist/codegen/cosmos/tx/v1beta1/tx.js"
+    "./cosmos/bank/v1beta1/query.js": {
+      "types": "./dist/codegen/cosmos/bank/v1beta1/query.d.ts",
+      "default": "./dist/codegen/cosmos/bank/v1beta1/query.js"
     },
     "./cosmos/staking/v1beta1/tx.js": {
       "types": "./dist/codegen/cosmos/staking/v1beta1/tx.d.ts",
       "default": "./dist/codegen/cosmos/staking/v1beta1/tx.js"
+    },
+    "./cosmos/tx/v1beta1/tx.js": {
+      "types": "./dist/codegen/cosmos/tx/v1beta1/tx.d.ts",
+      "default": "./dist/codegen/cosmos/tx/v1beta1/tx.js"
     },
     "./google/*.js": {
       "types": "./dist/codegen/google/*.d.ts",
@@ -52,6 +56,14 @@
       "types": "./dist/codegen/ibc/*.d.ts",
       "default": "./dist/codegen/ibc/*.js"
     },
+    "./icq/v1/*.js": {
+      "types": "./dist/codegen/icq/v1/*.d.ts",
+      "default": "./dist/codegen/icq/v1/*.js"
+    },
+    "./icq/v1/packet.js": {
+      "types": "./dist/codegen/icq/v1/packet.d.ts",
+      "default": "./dist/codegen/icq/v1/packet.js"
+    },
     "./swingset/msgs.js": {
       "types": "./dist/codegen/agoric/swingset/msgs.d.ts",
       "default": "./dist/codegen/agoric/swingset/msgs.js"
@@ -63,6 +75,14 @@
     "./swingset/swingset.js": {
       "types": "./dist/codegen/agoric/swingset/swingset.d.ts",
       "default": "./dist/codegen/agoric/swingset/swingset.js"
+    },
+    "./tendermint/abci/*.js": {
+      "types": "./dist/codegen/tendermint/abci/*.d.ts",
+      "default": "./dist/codegen/tendermint/abci/*.js"
+    },
+    "./tendermint/abci/types.js": {
+      "types": "./dist/codegen/tendermint/abci/types.d.ts",
+      "default": "./dist/codegen/tendermint/abci/types.js"
     },
     "./vstorage/query.js": {
       "types": "./dist/codegen/agoric/vstorage/query.d.ts",
