--- a/packages/cosmic-proto/package.json
+++ b/packages/cosmic-proto/package.json
@@ -56,8 +56,12 @@
       "types": "./dist/codegen/ibc/*.d.ts",
       "default": "./dist/codegen/ibc/*.js"
     },
-    "./icq/v1/*.js": {
-      "types": "./dist/codegen/icq/v1/*.d.ts",
+    "./ibc/applications/interchain_accounts/v1/packet.js": {
+      "types": "./dist/codegen/ibc/applications/interchain_accounts/v1/packet.d.ts",
+      "default": "./dist/codegen/ibc/applications/interchain_accounts/v1/packet.js"
+    },
+    "./icq/*.js": {
+      "types": "./dist/codegen/icq/*.d.ts",
       "default": "./dist/codegen/icq/v1/*.js"
     },
     "./icq/v1/packet.js": {
@@ -76,9 +80,9 @@
       "types": "./dist/codegen/agoric/swingset/swingset.d.ts",
       "default": "./dist/codegen/agoric/swingset/swingset.js"
     },
-    "./tendermint/abci/*.js": {
-      "types": "./dist/codegen/tendermint/abci/*.d.ts",
-      "default": "./dist/codegen/tendermint/abci/*.js"
+    "./tendermint/*.js": {
+      "types": "./dist/codegen/tendermint/*.d.ts",
+      "default": "./dist/codegen/tendermint/*.js"
     },
     "./tendermint/abci/types.js": {
       "types": "./dist/codegen/tendermint/abci/types.d.ts",
